<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditTraining.AddEditTraining"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_add_edit_training_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBlue"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/add_training"
        android:textColor="@color/white"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/name" />

        <EditText
            android:id="@+id/activity_add_edit_training_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"

            android:textColor="@color/black"
            android:text="@string/description" />

        <EditText
            android:id="@+id/activity_add_edit_training_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/setup_time"
            android:layout_marginRight="5sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/activity_add_edit_training_setup_time_less_button"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:text="-"
                android:textColor="@color/black"
                android:background="@drawable/button"/>

            <TextView
                android:id="@+id/activity_add_edit_training_setup_time_label"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="0"
                android:gravity="center"/>
            <Button
                android:id="@+id/activity_add_edit_training_setup_time_plus_button"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:text="+"
                android:textColor="@color/black"
                android:background="@drawable/button"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_add_edit_training_sequence_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/sequences"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/activity_add_edit_training_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/activity_add_edit_training_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_delete"
        android:text="@string/delete"
        android:textColor="@color/white"/>

</LinearLayout>