<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiveTraining.LiveTrainingEndActivity">

    <TextView
        android:id="@+id/activity_training_end_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBlue"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/training_end"
        android:textColor="@color/white"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_training_end_title">

        <Button
            android:id="@+id/activity_training_end_restart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/button"
            android:text="@string/restart_training"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/activity_training_end_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button"
            android:text="@string/back_to_menu"
            android:textColor="@color/white" />
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>